fixed jumping bug

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,8 @@ div[grey="false"] {
   min-width: 60px;
   min-height: 60px;
   border-radius: 50%;
+  /* box-shadow: 2px 2px 5px 0px rgb(43, 154, 158); */
+  box-shadow: inset 0 0 20px rgb(43, 154, 158);
 }
 
 div[red="true"] {
